fixed print layout issue in chrome based browsers

--- a/page.css
+++ b/page.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Open Sans', sans-serif;
-    background-color: #f7f7f7;
+    background-color: #fcfcfc;
     font-size: 12pt;
     line-height: 1.5em;
     padding: 2.0em 2.5em;
@@ -21,6 +21,10 @@ body {
 
 .columns {
     column-gap: 3em;
+}
+
+.gray {
+    color: #999;
 }
 
 header .sub-title {
@@ -73,6 +77,7 @@ article p {
 
 article header {
     margin-bottom: 0.5em;
+    break-inside: avoid;
 }
 
 #contact li {
@@ -134,18 +139,18 @@ ul.bullet-list li {
     border-image: 
         linear-gradient(
             to right,
-            #ccc, 
+            #c6c6c6, 
             rgba(247, 247, 247, 0)
         ) 100% 1;
 }
 
-@media only all and (min-width: 630px) {
+@media screen and (min-width: 630px) {
     .name {
         grid-template-columns: 1fr auto;
     }
 }
 /* 768 = 2 col on ipad in portrait, 769 = 1 col on ipad in portrait */
-@media only all and (min-width: 800px) {
+@media screen and (min-width: 800px) {
     .grid {
         grid-template-columns: 1fr 1fr;
     }
@@ -153,19 +158,31 @@ ul.bullet-list li {
         columns: 2;
     }
 }
-@media not print {
-    #contact li.doc .web {
-        display: none;
-    }
-}
 @media print {
-    #contact li.doc .pdf {
-        display: none;
-    }
     body {
         font-size: 10pt;
         background-color: #ffffff;
         /* need some margin to have left hand side list-item bullets show when printing */
         padding: 0 0 0 1.5em;
+    }
+    #content {
+        max-width: none;
+    }
+    .name {
+        grid-template-columns: 1fr auto;
+    }
+    .grid {
+        grid-template-columns: 1fr 1fr;
+    }
+    .columns {
+        columns: 2;
+    }
+    #contact li.doc .pdf {
+        display: none;
+    }
+}
+@media not print {
+    #contact li.doc .web {
+        display: none;
     }
 }
